# harvest-automations

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: .ci.yml
harvest_tools/: client.py  email.py  healthcheck.py  monthly_export.py  retry.py  runaway_timer.py  telegram.py  timesheet_reminder.py  weekly_summary.py
