[project]
name = "harvest-tools"
version = "0.1.0"
description = "Personal Harvest API automation tools"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "openpyxl>=3.1.5",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[project.scripts]
runaway-timer = "harvest_tools.runaway_timer:main"
monthly-export = "harvest_tools.monthly_export:main"
weekly-summary = "harvest_tools.weekly_summary:main"
